Squashed commits from DIAC-2179